# rickynet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
docs/: README.md  RUNBOOK.md
ios/: project.yml
ios/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Sources/RickyNet/: ContentView.swift  KeepAlive.swift  LogStore.swift  LogView.swift  RickyNet-Bridging-Header.h  RickyNetApp.swift  RickyNetCore.swift
ios/scripts/: make-appicon.sh
rickynet-core/: Cargo.toml  cbindgen.toml
rickynet-core/src/: device.rs  egress.rs  flow.rs  lib.rs  logger.rs
rickynet-wire/: Cargo.toml
rickynet-wire/src/: lib.rs
win/: Cargo.toml  app.manifest  build.rs  rickynet.rc
win/src/: app.rs  args.rs  elevation.rs  icon.rs  logging.rs  main.rs  routing.rs  state.rs  transport.rs  tun.rs  usbmux.rs  worker.rs
